--- a/_config.yml
+++ b/_config.yml
@@ -26,14 +26,16 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 domain: johnpink.github.io
 baseurl: /johnpink # the subpath of your site, e.g. /blog
-url: https://johnpink.github.io # the base hostname & protocol for your site, e.g. http://example.com
+url: hhttps://johnpink11.github.io/johnpink.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  johnpink11
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
+  - jekyll-seo-tag
 
 # Exclude from processing.
 # The following items will not be processed, by default.
