--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   Google search results) and in your feed.xml site description.
 domain: johnpink.github.io
 baseurl: /johnpink # the subpath of your site, e.g. /blog
-url: hhttps://johnpink11.github.io/johnpink.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
+url: https://johnpink11.github.io/johnpink.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: johnpink
 github_username:  johnpink11
 
 # Build settings
