--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 domain: johnpink.github.io
-baseurl: /johnpink # the subpath of your site, e.g. /blog
+baseurl: /johnpink.github.io # the subpath of your site, e.g. /blog
 url: https://johnpink11.github.io/johnpink.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: johnpink
 github_username:  johnpink11
