--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ twitter_username: johnpink
 github_username:  johnpink11
 
 # Build settings
-theme: jekyll-theme-cayman
+theme: minima
 plugins:
   - jekyll-feed
   - jekyll-sitemap
