--- a/_config.yml
+++ b/_config.yml
@@ -21,9 +21,7 @@
 title: JohnPink's Blog
 email: jixuezhanggg@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+Create what you want!
 domain: johnpink.github.io
 baseurl:  /johnpink.github.io # the subpath of your site, e.g. /blog
 url: https://johnpink11.github.io/johnpink.github.io/ # the base hostname & protocol for your site, e.g. http://example.com
