--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@
 
 title: JohnPink's Blog
 email: jixuezhanggg@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
+description: >- 
 Create what you want!
 domain: johnpink.github.io
 baseurl:  /johnpink.github.io # the subpath of your site, e.g. /blog
